@@ -1,3 +1,9 @@
+2001-04-17  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/ext/beos-window-menu.jl (make-label): surround the
+	name in parentheses if the window is on a different viewport as
+	well as if it's on a different workspace
+
 2001-04-12  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/frames.jl (apply-frame-style,
